030-software/fluxcd/apps/vuio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuio
  annotations:
    configmap.reloader.stakater.com/reload: scripts
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: vuio
    type: Recreate
  template:
    metadata:
      labels:
        app: vuio
    spec:
      containers:
      - command:
        - /usr/bin/entrypoint.sh
        args:
        - /app/vuio
        - --config
        - /config/config.toml
        image: ghcr.io/vuiodev/vuio:v0.0.49
        name: vuio
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 1900
          name: dlna
          protocol: UDP
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        volumeMounts:
        - mountPath: /usr/bin/entrypoint.sh
          subPath: entrypoint.sh
          name: scripts
        - mountPath: /config
          name: data
        - mountPath: /data/movies
          name: movies
          readOnly: true
        - mountPath: /tmp
          name: temp
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
      - name: movies
        nfs:
          path: /movies
          server: genji.home.arpa
      - name: scripts
        configMap:
          defaultMode: 493
          name: scripts
      - name: temp
        emptyDir:
          medium: Memory
