030-software/fluxcd/apps/vuio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuio
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  - name: ssdp
    port: 1900
    protocol: UDP
    targetPort: ssdp
  selector:
    app: vuio
  type: ClusterIP
