030-software/fluxcd/apps/vuio/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vuio
spec:
  hostnames:
  - vuio.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: vuio
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
